--- a/index.html
+++ b/index.html
@@ -779,7 +779,8 @@
   <div class="card-container" id="card-container">
     <div class="loading-spinner"></div>
     <div class="no-more-events" id="no-more">
-      🎉 All done! Check your selected events below.
+      🎉 All done!<br />
+      <button class="control-btn" id="export">Export to Calendar</button>
     </div>
   </div>
 
@@ -799,8 +800,8 @@
 
   <div class="controls">
     <button class="control-btn" id="view-selected">View Selected</button>
-    <button class="control-btn" id="reset">Reset All</button>
-    <button class="control-btn" id="export">Export to File</button>
+    <button class="control-btn" id="reset">Reset</button>
+    <button class="control-btn" id="export">Export to Calendar</button>
     <button class="control-btn" id="about">About</button>
   </div>
 
