fixed ics and persististant progress bug.

--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
     <div class="loading-spinner"></div>
     <div class="no-more-events" id="no-more">
       🎉 All done!<br />
-      <button class="control-btn" id="export">Export to Calendar</button>
+      <button class="control-btn" id="export-end">Export to Calendar</button>
     </div>
   </div>
 
